--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@dittolive/ditto": "^4.3.1",
     "@types/node": "^20.5.1",
-    "dotenv": "^16.3.1"
+    "nconf": "=0.12.0",
+    "uuid": "^9.0.1"
   }
 }
