ts, flightpath looper

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "@types/node": "^20.5.1",
     "nconf": "=0.12.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.4"
   }
 }
