--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@dittolive/ditto": "^4.3.1",
     "@types/node": "^20.5.1",
     "nconf": "=0.12.0",
+    "sense-hat-led": "^1.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
