--- a/config.json.example
+++ b/config.json.example
@@ -9,15 +9,15 @@
     "use-lan": "false",
     "use-ble": "true",
     "bpa-url": "http://ditto.bpa.local"
-  }
+  },
   "rectangle": {
-    "topLeftLat": 32.3779983
-    "topLeftLon": -86.3119614
-    "topRightLat": 32.3779983
-    "topRightLon": -86.3109061
-    "bottomLeftLat": 32.3770459
-    "bottomLeftLon": -86.3119614
-    "bottomRightLat": 32.3770459
+    "topLeftLat": 32.3779983,
+    "topLeftLon": -86.3119614,
+    "topRightLat": 32.3779983,
+    "topRightLon": -86.3109061,
+    "bottomLeftLat": 32.3770459,
+    "bottomLeftLon": -86.3119614,
+    "bottomRightLat": 32.3770459,
     "bottomRightLon": -86.3109061
   }
 }
